third_party/move/move-compiler-v2/tests/checking/abilities/v1/ability_constraint_tparams_invalid.exp

Diagnostics:
error: type `Cup<TnoK>` is missing required ability `copy`
   ┌─ tests/checking/abilities/v1/ability_constraint_tparams_invalid.move:22:9
   │
 7 │     fun c<T: copy>() {}
   │           - declaration of type parameter `T`
   ·
22 │         c<Cup<TnoK>>();
   │         ^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of function `c`

error: type `Cup<TnoC>` is missing required ability `key`
   ┌─ tests/checking/abilities/v1/ability_constraint_tparams_invalid.move:25:9
   │
 8 │     fun k<T: key>() {}
   │           - declaration of type parameter `T`
   ·
25 │         k<Cup<TnoC>>();
   │         ^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of function `k`

error: type `Cup<TnoC>` is missing required ability `store`
   ┌─ tests/checking/abilities/v1/ability_constraint_tparams_invalid.move:26:9
   │
 8 │     fun k<T: key>() {}
   │           - declaration of type parameter `T`
   ·
26 │         k<Box<Cup<TnoC>>>();
   │         ^^^^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of struct `Box`
   = required by instantiating type parameter `T` of function `k`

error: type `Cup<TnoC>` is missing required abilities `copy + drop + store`
   ┌─ tests/checking/abilities/v1/ability_constraint_tparams_invalid.move:28:9
   │
 9 │     fun cds<T: copy + drop + store>() {}
   │             - declaration of type parameter `T`
   ·
28 │         cds<Cup<TnoC>>();
   │         ^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of function `cds`

error: type `Cup<TnoK>` is missing required abilities `copy + drop + store`
   ┌─ tests/checking/abilities/v1/ability_constraint_tparams_invalid.move:29:9
   │
 9 │     fun cds<T: copy + drop + store>() {}
   │             - declaration of type parameter `T`
   ·
29 │         cds<Cup<TnoK>>();
   │         ^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of function `cds`

error: type `Cup<TnoK>` is missing required ability `copy`
   ┌─ tests/checking/abilities/v1/ability_constraint_tparams_invalid.move:32:21
   │
11 │     struct Sc<phantom T: copy> {}
   │                       - declaration of type parameter `T`
   ·
32 │         let Sc {} = Sc<Cup<TnoK>> {};
   │                     ^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of struct `Sc`

error: type `Cup<TnoC>` is missing required ability `key`
   ┌─ tests/checking/abilities/v1/ability_constraint_tparams_invalid.move:35:21
   │
12 │     struct Sk<phantom T: key> {}
   │                       - declaration of type parameter `T`
   ·
35 │         let Sk {} = Sk<Cup<TnoC>> {};
   │                     ^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of struct `Sk`

error: type `Cup<TnoC>` is missing required ability `store`
   ┌─ tests/checking/abilities/v1/ability_constraint_tparams_invalid.move:36:21
   │
12 │     struct Sk<phantom T: key> {}
   │                       - declaration of type parameter `T`
   ·
36 │         let Sk {} = Sk<Box<Cup<TnoC>>> {};
   │                     ^^^^^^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of struct `Box`
   = required by instantiating type parameter `T` of struct `Sk`

error: type `Cup<TnoC>` is missing required abilities `copy + drop + store`
   ┌─ tests/checking/abilities/v1/ability_constraint_tparams_invalid.move:38:23
   │
13 │     struct Scds<phantom T: copy + drop + store> {}
   │                         - declaration of type parameter `T`
   ·
38 │         let Scds {} = Scds<Cup<TnoC>> {};
   │                       ^^^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of struct `Scds`

error: type `Cup<TnoK>` is missing required abilities `copy + drop + store`
   ┌─ tests/checking/abilities/v1/ability_constraint_tparams_invalid.move:39:23
   │
13 │     struct Scds<phantom T: copy + drop + store> {}
   │                         - declaration of type parameter `T`
   ·
39 │         let Scds {} = Scds<Cup<TnoK>> {};
   │                       ^^^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of struct `Scds`
